# fund-screener

./: .env.example  .gitignore  README.md  fund-screener-plan.md  fund-screener-技术方案.md  main.py  pyproject.toml  requirements.txt
analysis/: backtest.py  indicators.py  screener.py
config/: .env  .env.example  requirements.txt  settings.py
data/: database.py  fetcher.py  models.py
report/: generator.py  notifier.py
scripts/: migrate_fund_nav.sql
src/fund_screener/: __init__.py  __main__.py
src/fund_screener/analysis/: __init__.py  backtest.py  indicators.py  screener.py
src/fund_screener/config/: __init__.py  settings.py
src/fund_screener/data/: __init__.py  database.py  fetcher.py  models.py
src/fund_screener/report/: __init__.py  generator.py  notifier.py
